ajout margin-bottom titre proposer

--- a/templates/sitepublic/proposer.html.twig
+++ b/templates/sitepublic/proposer.html.twig
@@ -3,7 +3,7 @@
 {% block main %}
 <section class="container margin-top">
 
-	<h1 class="text-center">Organiser un événement</h1>
+	<h1 class="text-center mb-5">Organiser un événement</h1>
 
     {{ form_start(form, {'method': 'POST'}) }}
 
