--- a/templates/admin/niveau.html.twig
+++ b/templates/admin/niveau.html.twig
@@ -5,11 +5,27 @@
 	 {{ form_start(niveauForm, {'method': 'POST'}) }}
 		<button class="btn btn-primary" type="submit">Enregistrer<i class="fa fa-paper-plane-o ml-1"></i></button>
 	{{ form_end(niveauForm) }}
+</section>
+<section class="container">
 
-	Niveaux déjà enregistrées :<br>
-	{% for niveau in niveaux %}
-		{{ niveau.nom}}
-	{% endfor %}
+		<h3>Niveaux déjà enregistrés</h3>
+
+		<div>
+			<table>
+				<thead>
+					<td>Nom</td>					
+					<td>Supprimer</td>
+				</thead>
+		{% for niveau in niveaux %}
+				<tr>
+					<td>{{ niveau.nom }}</td>					
+					<td><a href="{{ asset('admin/niveau/supprimer/') }}{{ niveau.id }}" class="blue-text ml-1">Supprimer</a></td>
+				</tr>
+		{% endfor %}
+				</tr>
+			</table>
+		</div>
+
 </section>
 
 {% endblock %}
