--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -48,6 +48,7 @@
 		        <p class="card-text">{{ evenement.sport.nom }}</p>
 		        <p class="card-text">{{ evenement.niveau.nom }}</p>
 		        <p class="card-text">Le {{ evenement.dateEvenement|date("d/m/Y") }} à {{ evenement.dateEvenement|date("H:i") }}</p>
+		        <p class="card-text">Il reste {{ placesRestantes }} places</p>
 		        <a href="#" class="btn btn-primary">Button</a>
 		    </div>
 
