--- a/templates/sitepublic/listeOrganise.html.twig
+++ b/templates/sitepublic/listeOrganise.html.twig
@@ -1,8 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block main %}
-<section class="form-elegant container">
-	Bonjour {{ user.username }} ! <br>
+<section class="form-elegant container margin-top">
 		{% if aucun %}
 			Vous n'avez organisé aucun événement pour le moment 
 		{% endif %}
