--- a/templates/sitepublic/details.html.twig
+++ b/templates/sitepublic/details.html.twig
@@ -27,7 +27,7 @@
 	Le {{ evenement.dateEvenement|date("d/m/Y") }} à {{ evenement.dateEvenement|date("H:i") }}<br>
 	Niveau demandé : {{ evenement.niveau.nom }}<br>
 	{{ evenement.sport.nom }}<br>
-	<img src="{{ asset('img/uploads/')}}{{ evenement.photo }}" class="img-fluid">
+	<img src="{{ asset('img/uploads/evenement/')}}{{ evenement.photo }}" class="img-fluid">
 	{% if dejaInscrit %}
 		<button class="btn btn-primary" type="submit"><a href="{{ asset('evenements/desinscription/') }}{{ evenement.id }}" class="blue-text ml-1"> Ne plus Participer </a></i></button>
 	{% endif %}
