--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,14 @@
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#afce25', endColorstr='#22b573',GradientType=1 );
 		}
 
+		/* Dégradé RGBAlpha */
+		.gradient-yellow-plusun-rgba {
+			background: -moz-linear-gradient(45deg, rgba(175,206,37,0.45) 0%, rgba(34,181,115,0.64) 93%, rgba(34,181,115,0.65) 100%);
+			background: -webkit-linear-gradient(45deg, rgba(175,206,37,0.45) 0%,rgba(34,181,115,0.64) 93%,rgba(34,181,115,0.65) 100%);
+			background: linear-gradient(45deg, rgba(175,206,37,0.45) 0%,rgba(34,181,115,0.64) 93%,rgba(34,181,115,0.65) 100%);
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#73afce25', endColorstr='#a622b573',GradientType=1 );
+		}
+
 
 	/* Badge vert découverte */
 	.Découverte {
@@ -189,12 +197,12 @@
 	
 
 	/* MENU DU PROFIL */
-	#profil-nav {
+	.form-plusun {
 		-webkit-box-shadow: 0 10px 10px 0 #cccccc;
 		box-shadow: 0 10px 10px 0 #cccccc;
 	}
 
-	#profil-nav .modal-header {
+	.form-plusun .modal-header {
 		height : 120px;
 
 		box-shadow : none;
@@ -202,7 +210,7 @@
 		overflow: hidden;
 	}
 
-		#profil-nav .modal-header .modal-header-decoration {
+		.form-plusun .modal-header .modal-header-decoration {
 			height : 100%;
 			width: 100%;
 		}
@@ -212,12 +220,12 @@
 		bottom : 6px;
 	}
 
-	#profil-nav .modal-body {
+	.form-plusun .modal-body {
 		/* annulation des paddings */
 		padding : 0px;
 	}
 
-		#profil-nav .list-group-item {
+		.form-plusun .list-group-item {
 			/* annulation des borders colorés */
 			border : none;
 
@@ -225,7 +233,7 @@
 			padding : .5rem 1.25rem;
 		}
 
-			#profil-nav .list-group-item.active {
+			.form-plusun .list-group-item.active {
 				/* background color blanc */
 				background-color: #FFF;
 				border-color : #FFF;
@@ -440,3 +448,278 @@
 /**********************************************************************/
 
 
+
+
+
+/**********************************************************************/
+/*------------------ BLOCK INSCRIPTION / CONNEXION -------------------*/
+	
+	/* mettre sur une ligne le bouton inscription et connexion */
+	#register-form .list-group {
+		flex-direction: row;
+		justify-content: center;
+	}
+
+/*------------------ BLOCK INSCRIPTION / CONNEXION -------------------*/
+/**********************************************************************/
+
+
+
+
+
+/**********************************************************************/
+/*------------------------ BLOCK COMMENTAIRES ------------------------*/
+
+	.chatTitleContainer {
+	  
+	    text-align: left;
+	    font-size: 14pt;
+	    vertical-align: middle;
+	    display: table-cell;
+	    height: 50px;
+	    width: 100%;
+	    font-family: Expert-Sans-Regular, verdana, Arial, helvetica, sans-serif;
+	    color: #b5b5b5;
+	    
+	}
+
+	.chatContainer {
+	    
+	    height: 100%;
+	    width: 100%;
+	    padding: 20px 0;
+	    
+	}
+
+	.chatHistoryContainer {
+	    
+	    padding: 20px;
+	    height: 400px;
+	    width: 100%;
+	    background-color: #f4f4f4;
+	    border-top: 1px solid #e1e1e1;
+	    border-left: 1px solid #d4d4d4;
+	    border-right: 1px solid #d4d4d4;
+	    border-bottom: 1px solid #c3c3c3;
+	    border-top-left-radius: 6px;
+	    border-top-right-radius: 6px;
+	    
+	}
+
+	.chatMessageControls {
+	    
+	    margin-top: 6px;
+	    padding: 10px;
+	    width: 100%;
+	    background-color: #fff;
+	    border-top: 1px solid #e1e1e1;
+	    border-left: 1px solid #d4d4d4;
+	    border-right: 1px solid #d4d4d4;
+	    border-bottom: 1px solid #c3c3c3;
+	    border-bottom-left-radius: 6px;
+	    border-bottom-right-radius: 6px;
+	    
+	}
+
+	#undoSendButton {
+	    
+	    margin-left: 10px;
+	    border-radius: 3px;
+	    
+	}
+
+	#clearMessageButton {
+	    
+	    border-radius: 0;
+	    border-left: none;
+	    border-right: none;
+	    
+	}
+
+	#sendMessageButton {
+	    
+	    border-top-left-radius: 0;
+	    border-bottom-left-radius: 0;
+	    margin-left: 5px;
+
+	    
+	}
+	#comment_commentaire {
+	display: block;
+	  width: 100%;
+	  margin-right: 15px;
+	  padding: 0.375rem 0.75rem;
+	  font-size: 1rem;
+	  line-height: 1.5;
+	  color: #495057;
+	  background-color: #fff;
+	  background-clip: padding-box;
+	  border: 1px solid #ced4da;
+	  border-radius: 0.25rem;
+	  transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
+	}
+
+
+	.fa {
+	    
+	    margin-right: 6px;
+	    
+	}
+	    
+	  
+	  
+	.formComments {
+	    
+		list-style-type: none;
+	    overflow-y: scroll;
+	    height: 100%;
+	    padding-bottom: 60px;
+	    padding-left: 0px;
+		
+	}
+
+	.formComments li {
+		
+		margin-bottom: 10px;
+			
+	}
+
+	.commentstep-1 {
+	    
+	    margin-left: 0px;
+	    
+	}
+
+	.commentstep-2 {
+	    
+	    margin-left: 48px;
+			
+	}
+
+	.commentstep-3 {
+	    
+	    margin-left: 96px;
+	    	
+	}
+
+	.form-comments-table tr:nth-child(1) td:nth-child(1) {
+		
+	    font-size: 9pt;
+	    color: #a7a7a7;
+	    white-space: nowrap;
+	    vertical-align: top;
+		
+	}
+	.signal {
+		float: right;
+		margin-right: -3px;
+		margin-top: -3px;
+	}
+	.comment-user {
+		
+	font-weight: bold;
+
+	}
+
+	.form-comments-table tr td {
+	    
+	     white-space: nowrap;
+	     
+	}
+	.form-comments-table tr:nth-child(1) td:nth-child(1) {
+	    
+	    padding-top: 8px;
+		
+	}
+	.form-comments-table tr:nth-child(1) td:nth-child(2) {
+		
+	    padding-top: 8px;
+	    font-size: 9pt;
+	    color: #737373;
+	    font-weight: bold;
+	    vertical-align: top;
+		
+	}
+
+	.form-comments-table tr:nth-child(1) td:nth-child(3) {
+	    
+	    vertical-align: top;
+		
+	}
+
+	.form-comments-table tr:nth-child(1) td:nth-child(4) {
+		
+	    width: 100%;
+		
+	}
+
+	.form-comments-table tr:nth-child(1) td:nth-child(5) {
+	    
+		
+	}
+
+	.comment-step-controls {
+		
+	}
+
+	.comment-avatar img {
+		
+		width: 36px;
+		height: 36px;
+		
+	}
+
+
+	.comment-marker {
+
+		margin-right: 10px;
+		color: #aeaeae;
+		
+	}
+
+
+	.comment {
+	    
+	    width: 100%;
+	    background-color: #fff;
+	    font-size: 12px;
+		margin: 0;
+		padding: 8px 8px;
+		line-height: 1.5;
+		color: #9e9e9e;
+		border-color: #ddd;
+		cursor: pointer;
+		border: 1px solid #e6e6e6;
+		border-bottom: 3px solid #dddddd;
+		border-radius: 3px;    
+	    
+	}
+	.comment-timestamp{
+		
+		font-size: 8px;
+		text-align: right;
+	}
+
+	.comment:hover {
+	    
+	    background-color: #fafafa;   
+	    
+	}
+
+	.comment-actions {
+	    
+	    border-top: 1px solid #dddddd;
+	    padding-top: 8px;
+	    margin-top: 8px;
+	    display: none;
+	    
+	}
+
+	.commentTD {
+
+	    
+	}
+
+
+/*------------------------ BLOCK COMMENTAIRES ------------------------*/
+/**********************************************************************/
