--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -74,11 +74,11 @@
 		      </div>
 
 		      <div class="tab-pane fade" id="list-organisateur" role="tabpanel" aria-labelledby="list-organisateur-list">
-		      	{% block evenementorganise %}Liste des événements organisés par l'utilisateur{% endblock %}
+				{{ include('sitepublic/listeOrganise.html.twig') }}
 		      </div>
 
 		      <div class="tab-pane fade" id="list-participant" role="tabpanel" aria-labelledby="list-participant-list">
-		      	{% block evenementparticipe %}Liste des événements auxquels l'utilisateur s'est inscrit et qui vont avoir lieu{% endblock %}
+		      	{{ include('sitepublic/listeParticipe.html.twig') }}
 		      </div>
 
 		      <div class="tab-pane fade" id="list-historique" role="tabpanel" aria-labelledby="list-historique-list">
