--- a/templates/sitepublic/listeParticipe.html.twig
+++ b/templates/sitepublic/listeParticipe.html.twig
@@ -1,20 +1,15 @@
-{% extends 'base.html.twig' %}
 
-{% block main %}
-<section class="form-elegant container margin-top">
-
-		{% if aucun %}
+		{% if participeAucun %}
 			Vous ne participez à aucun événement pour le moment !<br>
 		{% endif %}
-		{% if not aucun %}
-		Vous participez à : {{ nombre }} événements !<br>
+		{% if not participeAucun %}
+		Vous participez à : {{ participeNombre }} événements !<br>
 
 			{% for participant in participants %}
 				Titre : {{ participant.evenement.titre }}<br>
 				Description : {{ participant.evenement.description }}<br>
 				Le {{ participant.evenement.dateEvenement|date("d/m/Y") }} à {{ participant.evenement.dateEvenement|date("H:i") }}<br>
+				<button class="btn btn-primary" type="submit"><a href="{{ asset('evenements/desinscription/') }}{{ participant.evenement.id }}" class="blue-text ml-1"> Ne plus Participer </a></i></button>
 			{% endfor %}
 		{% endif %}
-</section>
 
-{% endblock %}
