--- a/templates/security/profil.html.twig
+++ b/templates/security/profil.html.twig
@@ -8,7 +8,7 @@
 		<aside class="col-md-5 col-sm-12">
 
 			<!-- header profil -->
-			<div id="profil-nav">
+			<div class="form-plusun">
 				<div style="position:relative">
 				{# Fond coloré #}
 	            <div class="modal-header gradient-yellow-plusun pt-0 pb-0"><div class="modal-header-decoration evenement-bg"></div></div>
@@ -32,7 +32,6 @@
 	                {# Contenu du menu #}
 					<div class="list-group collapse" id="profil-nav-item" role="tablist">
 						<h5 class="list-group-item h5-responsive"><i class="fa fa-id-card-o plusun-color" aria-hidden="true"></i> Mes informations</h5>
-					    	{# <a class="list-group-item list-group-item-action pl-5" id="list-info-voir-list" data-toggle="list" href="#list-info-voir" role="tab" aria-controls="info-voir">Voir</a> #}
 					    	<a class="list-group-item list-group-item-action pl-5" id="list-info-modifier-list" data-toggle="list" href="#list-info-modifier" role="tab" aria-controls="info-modifier">Modifier <span class="badge badge-danger badge-pill">1</span></a>
 
 					   <h5 class="list-group-item h5-responsive"><i class="fa fa-calendar plusun-color" aria-hidden="true"></i> Mes énévements</h5>
