--- a/templates/sitepublic/evenements.html.twig
+++ b/templates/sitepublic/evenements.html.twig
@@ -27,9 +27,8 @@
 						    	<div class="d-flex flex-column align-items-center">
 							    	{# PHOTO PROFIL #}
 							        <div class="avatar avatar-90 d-block z-depth-1">
-							        	<img class="img-avatar" src="{{ asset('img/uploads/user/')}}{{ app.user.photo }}">
+							        	<img class="img-avatar" src="{{ asset('img/uploads/user/')}}{{ photo }}">
 							        </div>
-
 							        {# PSEUDO UTILISATEUR #}
 							        <h5 class="h5-responsive mt-2">{{ evenement.organisateur }}</h5>
 						    	</div>
